--- a/css.css
+++ b/css.css
@@ -177,14 +177,14 @@ body {
 }
 
 .frases_marketing .credouble a {
-    color: rgb(68, 68, 68);
-    font-style: italic;
+    color:#00a732;
+    font-style: normal;
 }
 
 .frases_marketing .credouble a:hover {
-    color: black;
-    letter-spacing: 0.1px;
-    transition: all 0.2s ease-in-out;
+    color:  #007124;
+    transition: all 0.3s ease-in-out;
+    letter-spacing: 0.2px;
 }
 
 .container {
@@ -273,7 +273,7 @@ img[alt=nubank] {
 
 
 .parte__quatro {
-    width: 75%;
+    width: 80%;
     height: 500px;
     display: flex;
     flex-direction: row-reverse;
@@ -290,9 +290,17 @@ img[alt=nubank] {
 
 
 .cartoes_parceiros img {
-    width: 80%;
+    width: 88%;
     height: 100%;
+
 }
+.cartoes_parceiros img:hover {
+    width: 89%;
+    cursor: pointer;
+    transform: rotate(1deg);
+    transition: all 0.8s ease-in-out;
+}
+
 
 .frases_marketing_dois {
     width: 900px;
@@ -303,6 +311,16 @@ img[alt=nubank] {
     padding: 25px;
     margin-bottom: 17px;
 
+}
+
+.frases_marketing_dois h1 a {
+    color: #00b737;
+}
+
+.frases_marketing_dois h1 a:hover {
+    color: #005118;
+    letter-spacing: 0.2px;
+    transition: all 0.4s ease-in-out;
 }
 
 .frases_marketing_dois h2 {
@@ -330,7 +348,7 @@ img[alt=nubank] {
     background: linear-gradient(45deg, #b3ffb9, #5cfc9f);
     color: rgb(42, 42, 42);
     width: 100%;
-    height: 400px;
+    height: 650px;
     display: block;
     margin: auto;
     font-family: 'Ibarra Real Nova', serif;
@@ -339,21 +357,20 @@ img[alt=nubank] {
     font-family: 'Source Sans Pro', sans-serif;
 
 }
-.historia img{
-    width: 100%;
-   margin-right: 400px;
-  
-  
-}
 
-.imagem_historia{
-    margin-right: 40px;
-}
-.historia{
+.historia {
     display: flex;
-    margin: auto;
-  
+    justify-content: space-between;
+}
 
+.imagem_historia {
+    width: 200%
+}
+
+.historia img {
+    margin-top: 10%;
+    margin-right: 50%;
+    width: 60%;
 }
 
 .historia h2 {
