--- a/css.css
+++ b/css.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    max-height: 300vh;
+   
 }
 
 header {
     padding: 15px;
-    background: linear-gradient(45deg, #01d741, #3a9c97);
+    background: linear-gradient(45deg, #12cf4b, #3a9c97);
     font-family: 'Montserrat', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
 }
@@ -32,6 +32,7 @@ header {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
 
 .Frase_logo span:hover {
     color: rgb(238, 236, 236);
@@ -90,6 +91,7 @@ header {
     transition: all 0.3s ease;
 }
 
+
 .parte__secundaria {
     background-image: url(boa-vista_2.jpg);
     background-repeat: no-repeat;
@@ -97,13 +99,13 @@ header {
     -o-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    height: 400px;
+    height: 250px;
     padding: 5px;
 
 }
 
 .parte__secundaria:hover {
-    opacity: 90%;
+    opacity: 100%;
     transition: all 2s ease;
 }
 
@@ -117,7 +119,7 @@ header {
 }
 
 .frase_filosofica .um {
-    font-size: 45px;
+    font-size: 30px;
     font-weight: bold;
     padding: 10px;
     color: rgb(59, 59, 59);
@@ -128,14 +130,14 @@ header {
     margin: auto;
     margin-top: 50px;
     background: linear-gradient(45deg, #a9fdb6, #21f460);
-
+    opacity: 0;
 }
 
 .frase_filosofica .um:hover {
     letter-spacing: 0.4px;
     transition: all 1.5s ease-in-out;
     cursor: pointer;
-    opacity: 0;
+    opacity: 100%;
 }
 
 body {
@@ -143,15 +145,15 @@ body {
 }
 
 .parte__ternaria {
-    width: 70%;
-    height: 500px;
+    width: 85%;
+    height:px;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: rgb(0, 0, 0);
     margin: auto;
-    margin-top: 100px;
+    margin-top: 20px;
     font-size: 15px;
     font-weight: 100;
     padding: 15px;
@@ -163,7 +165,6 @@ body {
     font-size: 45px;
     padding: 25px;
     margin-bottom: 17px;
-
 }
 
 .frases_marketing h2 {
@@ -177,24 +178,24 @@ body {
 }
 
 .frases_marketing .credouble a {
-    color:#00a732;
+    color: #00a732;
     font-style: normal;
 }
 
 .frases_marketing .credouble a:hover {
-    color:  #007124;
+    color: #007124;
     transition: all 0.3s ease-in-out;
     letter-spacing: 0.2px;
 }
 
 .container {
-    margin-top: 4%;
-    margin-right: 200px;
+    margin-top: 10%;
+    margin-right: 100px;
     background: linear-gradient(45deg, #01fc4c, #3a9c97);
     padding: 1em;
     border-radius: 10px;
     width: 15em;
-    height: 25em;
+    height: 23em;
     box-shadow: 5px 8px 8px #000;
 }
 
@@ -225,7 +226,6 @@ img[alt=nubank] {
 .content_dois {
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
 
 img[alt=mastercard] {
@@ -243,6 +243,7 @@ img[alt=nubank] {
 
 
 .box-img {
+
     display: flex;
     align-items: center;
 }
@@ -273,15 +274,15 @@ img[alt=nubank] {
 
 
 .parte__quatro {
-    width: 80%;
-    height: 500px;
+    width: 85%;
+    height: auto;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
     color: rgb(0, 0, 0);
     margin: auto;
-    margin-top: 50px;
+    margin-top: 2px;
     font-size: 15px;
     font-weight: 100;
     padding: 15px;
@@ -290,15 +291,16 @@ img[alt=nubank] {
 
 
 .cartoes_parceiros img {
-    width: 88%;
-    height: 100%;
+    width: 90%;
+   
 
 }
+
 .cartoes_parceiros img:hover {
     width: 89%;
     cursor: pointer;
-    transform: rotate(1deg);
-    transition: all 0.8s ease-in-out;
+    transform: rotate(0.2deg);
+    transition: all 0.5s ease-in-out;
 }
 
 
@@ -348,7 +350,7 @@ img[alt=nubank] {
     background: linear-gradient(45deg, #b3ffb9, #5cfc9f);
     color: rgb(42, 42, 42);
     width: 100%;
-    height: 650px;
+    height: 600px;
     display: block;
     margin: auto;
     font-family: 'Ibarra Real Nova', serif;
@@ -364,23 +366,26 @@ img[alt=nubank] {
 }
 
 .imagem_historia {
-    width: 200%
+    width: 300%;
+    margin-bottom: 60%;
 }
 
 .historia img {
-    margin-top: 10%;
-    margin-right: 50%;
-    width: 60%;
+    margin-top: 32%;
+    margin-bottom: 80%;
+    width: 70%;
 }
 
 .historia h2 {
+    
     font-size: 70px;
-    margin-top: 60px;
+    margin-top: 30px;
     text-align: center;
     padding: 20px;
     font-weight: bold;
     font-style: italic;
 }
+
 
 .historia p {
     width: 50%;
